[package]
name = "dustash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.36"
raw-window-handle = "0.3.4"
ash-window = "^0.9"
crossbeam = "0.8"
smallvec = "1.8"
futures-util = "0.3"
blocking = "^1.2"
tracing = "0.1"

[dev-dependencies]
cstr = "0.2"
winit = "0.26"
tracing-subscriber = "0.2"
