[package]
name = "dustash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.36"
raw-window-handle = "0.3.4"
ash-window = "^0.9"
crossbeam-queue = "0.3.5"
smallvec = "1.8"
futures-util = "0.3"
blocking = "^1.2"
tracing = "0.1"
gpu-alloc="0.5"
gpu-alloc-ash="0.4"
thread_local={ version = "1.1", optional = true }

[dev-dependencies]
cstr = "0.2"
winit = "0.26"
tracing-subscriber = "0.3"

[features]
default = ["shared_command_pool"]
shared_command_pool = ["thread_local"]
